infra/gateway/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3001
    protocol: TCP
